<resources>
    <string name="app_name">Login</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="login_image">Login Image</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="new_to_this_app">New to this App</string>
    <string name="register"><u>Register</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="choose_role">Choose role</string>
    <string name="hello_john_doe">Hello John Doe</string>
</resources>